Fix figcaption on Firefox

--- a/static/css/figures-images.css
+++ b/static/css/figures-images.css
@@ -96,7 +96,8 @@
   border-radius: 4px;
   border-top-right-radius: 0;
   border-top-left-radius: 0;
-  margin-top: -2px;
+  margin-top: -3px;
+  position: relative;
   font-size: 80%;
 }
 .content figcaption .amp {
